# Claude-Code-Infinite-Perfect-Context

./: .ghtraf.json  .gitignore  .repokit.json  CHANGELOG.md  CONTRIBUTING.md  README.md  ROADMAP.md  pyproject.toml
.github/: release-template.md
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md
Claude_Code_Infinite_Perfect_Context/: __init__.py  __main__.py  _version.py
docs/: concepts.md  cookbook.md  platform-support.md  troubleshooting.md
docs/stats/: README.md  index.html
kits/: core.kit.json
src/ccipc/: __init__.py  __main__.py  _version.py  cli.py
src/ccipc_lib/: __init__.py  _version.py  boundaries.py  cc_compat.py  cc_constants.py  config.py  cost.py  errors.py  jsonl_search.py  schema.py  slug.py  tool_meta.py
tests/: conftest.py  test_version.py
tests/checklists/: v0.1.0__Phase0__scaffolding.md  v0.1.0__Phase1__search-then-fork-poc.md  v0.1.0__Phase1__search-then-fork-poc__results.md
tests/fixtures/: synthetic_session.jsonl
tests/integration/: test_cli_dispatch.py  test_pipeline_fan_in_rejection.py
tests/one-offs/: smoke_pipeline.py
tests/unit/: test_boundaries.py  test_cc_compat.py  test_config.py  test_cost.py  test_jsonl_search.py  test_slug.py
tools/core/cassette/: .ccipc.json  cassette.py
tools/core/cost-estimate/: .ccipc.json  cost_estimate.py
tools/core/find-boundary/: .ccipc.json  find_boundary.py
tools/core/hydrate/: .ccipc.json  hydrate.py
tools/core/search/: .ccipc.json  search.py
tools/core/search-multi/: .ccipc.json  search_multi.py
